# Canva-Hackathon

./: client_ui.py  pyproject.toml  receipt_client.py  receipt_rest_bridge.py
servers/: categories.json  pyproject.toml  receipt_ocr_server.py
