[project]
name = "servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "mcp>=1.13.1",
    "python-dotenv>=1.1.1",
]
